--- a/tomcat85-java11/Dockerfile
+++ b/tomcat85-java11/Dockerfile
@@ -25,7 +25,9 @@ ENV TOMCAT_VERSION 8.5.32
 USER root
 
 #Install package
-RUN apt update && apt -y install fontconfig
+RUN apt update && apt -y install \
+      fontconfig \
+      && rm -rf /var/lib/apt/list/*
 
 # Get and Unpack Tomcat
 RUN apt-get update \
