add font library (#15)
* add font library

* change centos install command

* apt install

* add no-cache

--- a/java11/Dockerfile
+++ b/java11/Dockerfile
@@ -18,6 +18,11 @@ LABEL io.k8s.description="Platform for running plain Java applications (fat-jar 
       com.yunify.dev-mode="JAVA_DEBUG:false" \
       com.yunify.dev-mode.port="JAVA_DEBUG_PORT:5005"
 
+#Install package
+RUN apt update && apt -y install \
+      fontconfig \
+      && rm -rf /var/lib/apt/list/*
+
 # S2I scripts + README
 COPY s2i /usr/local/s2i
 RUN chmod 755 /usr/local/s2i/*
