--- a/tomcat85-java8/Dockerfile
+++ b/tomcat85-java8/Dockerfile
@@ -24,7 +24,11 @@ ENV TOMCAT_VERSION 8.5.32
 
 USER root
 
+#Install package
+RUN apk add --update --no-cache ttf-dejavu fontconfig \
+    && fc-cache --force
 
+    
 # Get and Unpack Tomcat
 RUN apk add --update curl \
  && rm -rf /var/cache/apk/* \
