--- a/java8/Dockerfile
+++ b/java8/Dockerfile
@@ -18,6 +18,10 @@ LABEL io.k8s.description="Platform for running plain Java applications (fat-jar 
       com.yunify.dev-mode="JAVA_DEBUG:false" \
       com.yunify.dev-mode.port="JAVA_DEBUG_PORT:5005"
 
+#Install package
+RUN apk add --update --no-cache ttf-dejavu fontconfig \
+    && fc-cache --force
+
 # S2I scripts + README
 COPY s2i /usr/local/s2i
 RUN chmod 755 /usr/local/s2i/*
