--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -83,7 +83,7 @@ jobs:
         labels: ${{ steps.metaContributors.outputs.labels }}
         platforms: linux/amd64,linux/arm64
 
-  BuildJava11CentOS7:
+  BuildJava11Runtime:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
@@ -93,7 +93,7 @@ jobs:
       uses: docker/metadata-action@v3
       with:
         images: |
-          kubespheredev/java-11-centos7
+          kubespheredev/java-11-runtime
           ghcr.io/${{ github.repository_owner }}/java-11-runtime
         tags: |
           type=schedule
