Replace jdk11 base image

--- a/java11/Dockerfile
+++ b/java11/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11-jre-slim
+FROM eclipse-temurin:11-jre-alpine
 
 ARG EXPOSE_PORT=8080
 EXPOSE ${EXPOSE_PORT}
@@ -19,9 +19,8 @@ LABEL io.k8s.description="Platform for running plain Java applications (fat-jar 
       com.yunify.dev-mode.port="JAVA_DEBUG_PORT:5005"
 
 #Install package
-RUN apt update && apt -y install \
-      fontconfig \
-      && rm -rf /var/lib/apt/list/*
+RUN apk upgrade && apk add --update --no-cache ttf-dejavu fontconfig \
+    && fc-cache --force
 
 # S2I scripts + README
 COPY s2i /usr/local/s2i
